--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,4 +1,14 @@
 asgiref==3.8.1
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==44.0.3
 Django==5.2
+django-allauth==65.7.0
+idna==3.10
+pycparser==2.22
+PyJWT==2.10.1
+requests==2.32.3
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.4.0
